[tool.poetry]
name = "numerblox"
version = "1.0.0"
description = "Solid Numerai Pipelines"
authors = ["CrowdCent <support@crowdcent.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include="numerblox"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tqdm = "^4.66.1"
numpy = "1.23.2"
scipy = "^1.10.0"
pandas = "^2.1.1"
pandas-ta = "^0.3.14b0"
joblib = "^1.3.2"
pyarrow = "^13.0.0"
numerapi = "^2.15.1"
matplotlib = "^3.4.0"
scikit-learn = "^1.3.1"
python-dateutil = "^2.8.2"
google-cloud-storage = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.extras]
documentation = ["mkdocs", "mkdocs-material", "mkdocstrings-python", "mkdocstrings"]
optional = ["eod", "kaggle", "tensorflow"]
all = ["mkdocs", "mkdocs-material", "mkdocstrings-python", "mkdocstrings", "eod", "kaggle", "tensorflow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
