[tool.poetry]
name = "numerblox"
version = "1.1.17"
description = "Solid Numerai Pipelines"
authors = ["CrowdCent <support@crowdcent.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include="numerblox"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tqdm = "^4.66.1"
numpy = "^1.26.3"
scipy = "^1.10.0"
pandas = "^2.1.1"
pandas-ta = "^0.3.14b0"
joblib = "^1.3.2"
pyarrow = "^14.0.1"
numerapi = "^2.16.1"
matplotlib = "^3.4.0"
scikit-learn = "^1.3.1"
python-dateutil = "^2.8.2"
google-cloud-storage = "^2.11.0"
numerai-era-data = "^0.1.1"
numerai-tools = "^0.0.17"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.2"
eod = "^0.2.1"
kaggle = "^1.5.16"
tensorflow = "^2.13.0"
tensorflow-io-gcs-filesystem = "^0.34.0"
scikit-lego = "^0.6.15"
xgboost = "^2.0.0"
mkdocstrings-python = "^1.7.1"

[tool.poetry.extras]
documentation = ["mkdocs", "mkdocs-material", "mkdocstrings-python", "mkdocstrings"]
optional = ["eod", "kaggle", "tensorflow", "scikit-lego", "xgboost"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
