[project]
name = "numerblox"
version = "1.4.1"
description = "Solid Numerai Pipelines"
authors = [
    {name = "CrowdCent", email = "support@crowdcent.com"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "tqdm>=4.66.1",
    "numpy>=1.26.3,<2.0.0",
    "scipy>=1.10.0",
    "pandas>=2.1.1",
    "pandas-ta==0.3.14b",
    "joblib>=1.3.2",
    "pyarrow>=14.0.1",
    "numerapi>=2.19.1",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.4.1",
    "python-dateutil>=2.8.2",
    "google-cloud-storage>=2.11.0",
    "numerai-era-data>=0.1.1",
    "numerai-tools>=0.2.2",
    "polars>=1.5.0",
    "werkzeug>=3.0.3",
]

[project.optional-dependencies]
test = [
    "pytest<8.0.0,>=7.4.2",
    "pytest-cov<5.0.0,>=4.1.0",
    "pytest-mock<4.0.0,>=3.11.1",
    "mkdocs<2.0.0,>=1.5.3",
    "mkdocs-material<10.0.0,>=9.4.2",
    "eod<1.0.0,>=0.2.1",
    "kaggle<2.0.0,>=1.5.16",
    "scikit-lego>=0.9.1",
    "xgboost<3.0.0,>=2.0.0",
    "mkdocstrings-python<2.0.0,>=1.7.1",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 300

[tool.ruff.lint]
ignore = ["F403", "F811"] 
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Any isort-specific settings go here
